--- a/test.html
+++ b/test.html
@@ -18,43 +18,42 @@
 <div id="question1" class="question-container active">
  <div class="question">1. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
  <div class="option">
-   <input type="radio" name="q1" value="0" id="q1a1"/>
+   <input type="radio" name="q1" value="0" id="q1a1" onchange='autoNext(1)'/>
    <label for="q1a1"><span>Я не чувствую себя расстроенным, печальным.</span></label>
  </div>
  <div class="option">
-   <input type="radio" name="q1" value="1" id="q1a2"/>
+   <input type="radio" name="q1" value="1" id="q1a2" onchange='autoNext(1)'/>
    <label for="q1a2"><span>Я расстроен.</span></label>
  </div>
  <div class="option">
-   <input type="radio" name="q1" value="2" id="q1a3"/>
+   <input type="radio" name="q1" value="2" id="q1a3" onchange='autoNext(1)'/>
    <label for="q1a3"><span>Я всё время расстроен и не могу от этого отключиться.</span></label>
  </div>
  <div class="option">
-   <input type="radio" name="q1" value="3" id="q1a4"/>
+   <input type="radio" name="q1" value="3" id="q1a4"onchange='autoNext(1)'/>
    <label for="q1a4"><span>Я настолько расстроен и несчастлив, что не могу это выдержать.</span></label>
  </div>
- <button onclick="nextQuestion(1)">Далее</button>
 </div>
 
 <div id="question2" class="question-container">
  <div class="question">2. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
  <div class="option">
-   <input type='radio' name='q2' value='0' id='q2a1'/>
+   <input type='radio' name='q2' value='0' id='q2a1' onchange='autoNext(2)'/>
    <label for='q2a1'><span>Я не тревожусь о своем будущем.</span></label>
  </div>
  <div class='option'>
-   <input type='radio' name='q2' value='1' id='q2a2'/>
+   <input type='radio' name='q2' value='1' id='q2a2'onchange='autoNext(2)'/>
    <label for='q2a2'><span>Я чувствую, что озадачен будущим.</span></label>
  </div>
  <div class='option'>
-   <input type='radio' name='q2' value='2' id='q2a3'/>
+   <input type='radio' name='q2' value='2' id='q2a3'onchange='autoNext(2)'/>
    <label for='q2a3'><span>Я чувствую, что меня ничего не ждет в будущем.</span></label>
  </div>
  <div class='option'>
-   <input type='radio' name='q2' value='3' id='q2a4'/>
+   <input type='radio' name='q2' value='3' id='q2a4'onchange='autoNext(2)'/>
    <label for='q2a4'><span>Мое будущее безнадежно, и ничто не может измениться к лучшему.</span></label>
  </div>
- <button onclick='nextQuestion(2)'>Далее</button>
+<button onclick="prevQuestion(2)" id="backBtn2">Назад</button>
 </div>
 
 <!-- Можно добавить остальные вопросы по аналогии -->
@@ -63,22 +62,22 @@
 <div id='question3' class='question-container'>
 <div class='question'>3. Что лучше описывает Ваше состояние за прошедшую неделю и сегодня?</div>
 <div class='option'>
-<input type='radio' name='q3' value='0' id='q3a1'/>
+<input type='radio' name='q3' value='0' id='q3a1'onchange='autoNext(3)'/>
 <label for='q3a1'><span>Я не чувствую себя неудачником.</span></label>
 </div>
 <div class='option'>
-<input type='radio' name='q3' value='1' id='q3a2'/>
+<input type='radio' name='q3' value='1' id='q3a2'onchange='autoNext(3)'/>
 <label for='q3a2'><span>Я чувствую, что терпел больше неудач, чем другие люди</span></label>
 </div>
 <div class='option'>
-<input type='radio' name='q3' value='2' id='q3a3'/>
+<input type='radio' name='q3' value='2' id='q3a3'onchange='autoNext(3)'/>
 <label for='q3a3'><span>Когда я оглядываюсь на свою жизнь, я вижу в ней много неудач.</span></label>
 </div>
 <div class='option'>
-<input type='radio' name='q3' value='3' id='q3a4'/>
+<input type='radio' name='q3' value='3' id='q3a4'onchange='autoNext(3)'/>
 <label for='q3a4'><span>Я чувствую, что как личность я — полный неудачник.</span></label>
 </div>
-<button onclick='nextQuestion(3)'>Далее</button>
+  <button onclick="prevQuestion(2)" id="backBtn2">Назад</button>
 </div>
 </body>
 </html>
@@ -99,7 +98,24 @@
 <script>
   const totalQuestions = 3; // Общее число вопросов
   const answers = {};
+function prevQuestion(questionNumber) {
+  // Скрываем текущий вопрос
+  document.getElementById(`question${questionNumber}`).style.display = 'none';
 
+  // Определяем предыдущий вопрос
+  const prevQ = questionNumber - 1;
+  if (prevQ >= 1) {
+    document.getElementById(`question${prevQ}`).style.display = 'block';
+
+    // Обновляем видимость кнопок "Назад"
+    for (let i = 1; i <= totalQuestions; i++) {
+      document.getElementById(`backBtn${i}`).style.display = (i === prevQ) ? 'none' : 'inline-block';
+    }
+
+    // Обновляем прогресс
+    updateProgress(prevQ);
+  }
+}
   function nextQuestion(questionNumber) {
     const selected = document.querySelector(`input[name=q${questionNumber}]:checked`);
     if (!selected) {
