--- a/test.html
+++ b/test.html
@@ -38,7 +38,7 @@
             height: 90px;
         }
         .option:hover {
-            background: #e9e9e9;
+         background-color : rgba(144,128,208,1);
         }
         .option input {
             position: absolute;
