--- a/test.html
+++ b/test.html
@@ -31,7 +31,7 @@
              background: rgba(255, 255, 255, 0.5);
             border-radius: 45px;
             cursor: pointer;
-            display: block;
+            display: flex;
             position: relative;
             padding-left: 40px;
             width: 345px;
