--- a/test.html
+++ b/test.html
@@ -168,15 +168,18 @@
 
 <div id="question2" class="question-container">
    <div class="question">2. Я не тревожусь о своем будущем.</div>
+    <button class="back-button" onclick="prevQuestion(2)">Назад</button>
    <div class="option" onclick="selectAnswer(2,0)">0 - Я не тревожусь о своем будущем.</div>
    <div class="option" onclick="selectAnswer(2,1)">1 - Я чувствую, что озадачен будущим.</div>
    <div class="option" onclick="selectAnswer(2,2)">2 - Я чувствую, что меня ничего не ждет в будущем.</div>
    <div class="option" onclick="selectAnswer(2,3)">3 - Мое будущее безнадежно, и ничто не может измениться к лучшему.</div>
+    
 </div>
 
 <div id="question3" class="question-container">
    <div class="question">3. Я не чувствую себя неудачником.</div>
-   <div class="option" onclick="selectAnswer(3,0)">0 - Я не чувствую себя неудачником.</div>
+    <button class="back-button" onclick="prevQuestion(3)">Назад</button>
+   <div class="option" onclick= "selectAnswer(3,0)">0 - Я не чувствую себя неудачником.</div>
    <div class "option" onclick = "selectAnswer(3,1)">1 - Я чувствую, что терпел больше неудач, чем другие люди</div>
    <div class = "option" onclick = "selectAnswer(3,2)">2 - Когда я оглядываюсь на свою жизнь, я вижу в ней много неудач</div>
    <div class = "option" onclick = "selectAnswer(3,3)">3 - Я чувствую, что как личность я — полный неудачник.</div> 
@@ -202,7 +205,22 @@ function updateProgress(questionNumber) {
  const progressPercent = (questionNumber -1) / totalQuestions *100; 
  document.getElementById('progress').style.width = progressPercent + '%';
 }
+function prevQuestion(questionNumber) {
+  const currentDiv = document.getElementById('question' + questionNumber);
+  currentDiv.classList.remove('active');
 
+  const prevQuestionNumber = questionNumber - 1;
+  const prevDiv = document.getElementById('question' + prevQuestionNumber);
+  if (prevDiv) {
+    prevDiv.classList.add('active');
+    updateProgress(prevQuestionNumber);
+  }
+}
+
+// Обновление showResults для пересчета суммы
+function showResults() {
+  // пересчитать сумму баллов по ответам
+  totalScore = Object.values(answers).reduce((sum,val)=>sum+val ,0);
 // Переход к следующему вопросу
 function nextQuestion(currentQuestionNumber) {
  const currentDiv = document.getElementById('question' + currentQuestionNumber);
