--- a/test.html
+++ b/test.html
@@ -70,6 +70,19 @@
         button:hover {
             background: #45a049;
         }
+            /* Стиль для кнопки "Назад" */
+.back-button {
+  display: inline-block;
+  padding: 8px 16px;
+  margin-top: 10px;
+  background: rgba(255, 255, 255, 0.5);
+  border: none;
+  border-radius:45px;
+  cursor:pointer;
+}
+.back-button:hover {
+  background-color:#bbb;
+}
         #result-container {
             display: none;
             background: white;
@@ -178,7 +191,8 @@
    <div class='option' onclick='selectAnswer(2,2)'>2 - Я чувствую, что меня ничего не ждет в будущем.</div>
    <div class='option' onclick='selectAnswer(2,3)'>3 - Мое будущее безнадежно, и ничто не может измениться к лучшему.</div>   
 </div>
-
+ <button class='back-button' onclick='prevQuestion(2)'>Назад</button>
+</div>
 <div id="question3" class="question-container">
    <div class="question">3. Я не чувствую себя неудачником.</div>
    <button class='back-button' onclick='prevQuestion(3)'>Назад</button>
@@ -187,7 +201,8 @@
    <div class='option' onclick= 'selectAnswer(3,2)'>2 - Когда я оглядываюсь на свою жизнь, я вижу в ней много неудач</div>
    <div class='option' onclick= 'selectAnswer(3,3)'>3 - Я чувствую, что как личность я — полный неудачник.</div> 
 </div>
-
+ <button class='back-button' onclick='prevQuestion(3)'>Назад</button>
+</div>
 <!-- Контейнер с результатами -->
 <div id='result-container' style='display:none;'>
 <h2>Результаты теста</h2>
